tooling/nargo_cli/tests/snapshots/execute__tests__integer_array_indexing_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "4717429997466275571",
  "abi": {
    "parameters": [
      {
        "name": "arr",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62SUQ7DIAiG1bp77AggUOFtV5mZvf8R1qwuoX2tX0J+Y8j3AMRwkPdK4x33Wlw+w5nHyNdIgpW519KR8A3FmgqwtFVRUVQ+RYm6slZrVsGQqeMmRhsczHTFia400bU4F9wD8zzXb17Z3UBwN5DG/v3fte/PF9CzDp1IAgAA",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
