tooling/nargo_cli/tests/snapshots/execute__tests__integer_array_indexing_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "12107210904220504183",
  "abi": {
    "parameters": [
      {
        "name": "arr",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VXzU7DMAx2lrRbh6YhuCFxA3FtWWFDcJgE0niNimnPkUdnEfH6xc340ZIDlqq0ju3vs+N6q6IvMftLwb2TkV+dXlMobLv2a32aNAlj1bk4qn/AcZSBYw6eOiFPBTzN4MaTd4XRkYRMRPfi18qv8kVYJypCJXBTxl/V7VNFoSTmv6goHA6J47cc3+SJX499nDcbxieBy7qN7Wu5ET7MNdNZ5q7FYkbDQc+5MHaRB7tVAo/EOZDAn1LWvmuUwGM+sj48F2ZsY3s+SuwZO8yD9wrY4/Od7K8rsIv1Fu4xFyfcmy7GLcS7E7jvdsi3EvES9/Eq88xoLo/wJ8hxbOkgvKdBx+fBdZqgvdirYM/YEGfqnw3gYCzmUQj7G/8892sJPux/HsEvBX7AO6LDGslYOqJj+3J/Xfv7M+p/J19tHy/lbHIYrn8fgS++K8wX+xj5zOn4bM88Vw+zpPyGK+IzV5y16CvzlnkVIq9M79n9b/PSf8hLHckT/XQkL5x9Md1Ps1NF/LCvjQ19115fnyDLVf/HlWdKQcMPLcQvhP2zf54Cf17NCTx3y67ZLbpd99Btt+1HdyHik6jTJ0M21KVFDgAA",
  "debug_symbols": "ldLRCoMgFAbgdznXXpips15ljLCyEMTCajCid5+OxaLZhTfiET/OgfOv0Kp66Sttu2GC8r6CGRo568H6at0Q1E4bo/vq+Aw4HBR//k+jtKGcZulmKDNMESjb+hsh3nfaKCgZ3h4IaJYsSFTkYhcsO4s8WdBkwaKCFNeCRwXnuxB/4pYsRLIoooLdLgWL77zYexDMzyK+cyEuxOarp3Ra1kZ9I9gttjkkcn6N6hTO0Q2NahenQkx/CQ1RIBzl3M+RhckZRazwLXybNw==",
  "file_map": {
    "50": {
      "source": "global ARRAY_LEN: u32 = 3;\n\nfn main(arr: [Field; ARRAY_LEN], x: u32) -> pub Field {\n    let mut value = arr[ARRAY_LEN - 1];\n\n    value += arr[0 as u32];\n    value += arr[1 as Field];\n\n    value + x as Field\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/integer_array_indexing/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
